feat: added new nav component and renamed layout components

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,16 @@ body{
 h1,h2,h3,h3,h5{
     color: white
 }
+
+@keyframes gradient-animation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
